# simple-gemm

./: CMakeLists.txt  README.md  environment.yml  run.sh
src/: main.cxx  sgemm-block-ikj.c  sgemm-block-kij.c  sgemm-ijk.c  sgemm-ikj.c  sgemm-jik.c  sgemm-jki.c  sgemm-kij.c  sgemm-kji.c  sgemm-mkl.c  sgemm3.c
